<resources>
    <string name="app_name">SOLO Wallet</string>

    <string name="common_text_activated">Activated</string>
    <string name="common_text_balance">Balance</string>
    <string name="common_text_wallet">Wallet</string>
    <string name="common_text_receive">Receive</string>
    <string name="common_text_exchange">Exchange</string>
    <string name="common_text_scan">Scan</string>
    <string name="common_text_send">Send</string>

    <string name="msg_copy_address">Address copied!</string>
    <string name="msg_network_error">Check your connection and try again.</string>

    <string name="text_button_confirm_transaction">Confirm Transaction</string>
    <string name="text_button_generate">Generate</string>
    <string name="text_button_retry">Retry</string>
    <string name="text_button_manage">Manage</string>

    <string name="text_change_address">Change Address</string>
    <string name="text_hint_enter_receiving_address">Enter Receiving Address</string>
    <string name="text_hint_enter_amount">Enter Amount</string>
    <string name="text_hint_gas_limit">Gas Limit</string>
    <string name="text_hint_insert_data">Insert Data</string>
    <string name="text_show_qr_code">Show QR Code</string>
    <string name="text_my_wallet">My %s Wallet</string>
    <string name="text_transaction_history">Transaction History</string>
    <string name="text_spendable">Spendable:</string>

    <string name="wallet_address_type">%s address</string>
    <string name="wallet_list">Wallet list</string>
</resources>
