<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="?actionBarSize"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <FrameLayout
        android:id="@+id/contain_main_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/bottom_navigation_bar_height" />

    <RadioGroup
        android:id="@+id/action_nav_group"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_navigation_bar_height"
        android:layout_gravity="bottom"
        android:background="@color/windowBackground"
        android:checkedButton="@+id/action_nav_wallet"
        android:elevation="8dp"
        android:orientation="horizontal"
        android:translationZ="12dp">

        <RadioButton
            android:id="@+id/action_nav_wallet"
            style="@style/BottomNavigationItem"
            android:drawableTop="@drawable/ic_nav_wallet"
            android:text="@string/common_text_wallet" />

        <RadioButton
            android:id="@+id/action_nav_receive"
            style="@style/BottomNavigationItem"
            android:drawableTop="@drawable/ic_nav_receive"
            android:text="@string/common_text_receive" />

        <RadioButton
            android:id="@+id/action_nav_exchange"
            style="@style/BottomNavigationItem"
            android:drawableTop="@drawable/ic_nav_exchange"
            android:text="@string/common_text_exchange" />

        <RadioButton
            android:id="@+id/action_nav_send"
            style="@style/BottomNavigationItem"
            android:drawableTop="@drawable/ic_nav_send"
            android:text="@string/common_text_send" />

    </RadioGroup>
</FrameLayout>